--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  display: flex;
+  display: flex !important;
   padding: 20px 2%;
   max-width: 1200px;
   margin: 50px auto 0 auto;
